--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,10 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Log In</button>
+            <div class="d-flex justify-content-between">
+                <button type="submit" class="btn btn-primary me-2 w-50">Log In</button>
+                <a href="/signup" class="btn btn-info w-50">Sign Up</a>
+            </div>
         </form>
     </div>
 </div>
