--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,16 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon-96x96.png') }}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}"/>
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}" />
 </head>
 <body>
-
+    {% if request.endpoint not in ['login', 'signup'] %}
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -33,11 +40,6 @@
                     <li class="nav-item">
                         <a class="btn btn-outline-info" href="{{ url_for('dashboard') }}">
                             <i class="fa fa-home"></i> Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-info" href="{{ url_for('scans') }}">
-                            <i class="fa fa-search"></i> Scans
                         </a>
                     </li>
                     <li class="nav-item">
@@ -64,6 +66,16 @@
             </div>
         </div>
     </nav>
+    
+    {% else %}
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('login') }}">
+                <i class="fa fa-shield-alt me-2"></i>SentriScan
+            </a>
+        </div>
+    </nav>
+    {% endif %}
 
     <!-- Main Content -->
     <main class="container py-4">
