--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,6 +24,7 @@
         <div class="card">
             <div class="card-body">
                 <h5>All Events</h5>
+                <p class="fs-3">{{ data.last_result }}</p>
             </div>
         </div>
     </div>
