--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,17 @@
         <h3 class="text-center">Login to SentriScan</h3>
         <form method="POST" action="/login">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Log In</button>
+            <div class="d-flex justify-content-between">
+                <button type="submit" class="btn btn-primary me-2 w-50">Log In</button>
+                <a href="/signup" class="btn btn-info w-50">Sign Up</a>
+            </div>
         </form>
     </div>
 </div>
